# python-project-83

./: .env_example  Makefile  README.md  database.sql  pyproject.toml  requirements.txt
.github/workflows/: pyci.yml
page_analyzer/: app.py  db.py  url_handler.py
page_analyzer/templates/: base.html  index.html  not_found.html  url.html  urls.html
